# haishi-agent

./: .env  .gitignore  Cargo.toml  README.md  default.conf  temp_config\test.xyz.conf  test.rs
src/: domain_config.rs  main.rs
templates/: nginx.config.j2
