[package]
name = "haishi-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = {version = "0.12.4",features = ["json"]}
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
tera = "1.20.0"
zip = "2.1.3"
rocket = "0.5.1"
